fix the size of the secondary title on smaller devices

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -47,7 +47,15 @@
 
 @media screen and (max-width: 490px) {
   .hero-heading {
-    font-size: 3.2rem;
+    font-size: 3.6rem;
+  }
+
+  .hero-subheading {
+    font-size: 1.8rem;
+  }
+
+  .hero-subheading span {
+    font-size: 2.4rem;
   }
 
   .introduction .introduction-heading {
